@@ -1,5 +1,4 @@
 package de.ids_mannheim.korap.misc;
-import de.ids_mannheim.korap.config.ConfigTest;
 import org.junit.runner.RunWith;
 import org.junit.runners.Suite;
 
