@@ -1,17 +1,0 @@
-package de.ids_mannheim.korap.web.controller;
-
-import org.junit.Test;
-
-/**
- * @author hanl
- * @date 08/02/2016
- */
-public class ResourceRemoteApiTest {
-
-
-
-    @Test
-    public void testResourceGetFromDemo () {
-
-    }
-}
